# guillotine-bot

./: Cargo.toml  Dockerfile  README.md
.circleci/: config.yml
src/: main.rs
