[package]
name = "guillotine"
version = "0.1.0"
authors = ["Danilo Bargen <mail@dbrgn.ch>"]
edition = "2018"

[dependencies]
chrono = "0.4"
chrono-tz = "0.5"
env_logger = "0.7"
futures = "0.3"
log = "0.4"
telegram-bot = { git = "https://github.com/telegram-rs/telegram-bot", branch = "master" }
tokio = { version = "0.2", features = ["macros", "rt-core"] }
